--- a/docs/assets/index-DUBmS--9.css
+++ b/docs/assets/index-DUBmS--9.css
@@ -1,1 +1,152 @@
-.container_button{max-width:600px;margin-left:10px;padding:20px;border:2px solid #ccc;background-color:#f0f0f0;text-align:center}.btn_incr{width:150px;height:40px;background-color:green;color:#fff;border:none;border-radius:5px;padding:10px 20px;cursor:pointer}.btn_dism{width:150px;height:40px;background-color:red;color:#fff;border:none;border-radius:4px;padding:10px 20px;cursor:pointer}.btn_rein{width:150px;height:40px;background-color:#007bff;color:#fff;border:none;border-radius:4px;padding:10px 20px;cursor:pointer}.btn_incr:hover,.btn_dism:hover,.btn_rein:hover{background-color:gray}.container_profile{max-width:600px;margin-left:10px;padding:20px;border:2px solid #ccc;background-color:#f0f0f0}.form{display:flex;flex-direction:column;margin-bottom:10px}.input-field{margin-bottom:10px;padding:10px;border:1px solid #ccc;border-radius:5px}.btn{padding:10px;background-color:#007bff;color:#fff;border:none;border-radius:5px;cursor:pointer}.btn:hover{background-color:#0056b3}.profile{margin-bottom:20px;padding:20px;border:1px solid #ccc;border-radius:5px;background-color:#e9ffea}.perfilTitulo{text-align:center}.datos_usuario{color:#00f}.titulo{font-size:2.5em}.titulo{text-align:center}:root{font-family:Inter,system-ui,Avenir,Helvetica,Arial,sans-serif;line-height:1.5;font-weight:400;color-scheme:light dark;color:#ffffffde;background-color:#242424;font-synthesis:none;text-rendering:optimizeLegibility;-webkit-font-smoothing:antialiased;-moz-osx-font-smoothing:grayscale}a{font-weight:500;color:#646cff;text-decoration:inherit}a:hover{color:#535bf2}body{margin:0;display:flex;place-items:center;min-width:320px;min-height:100vh}h1{font-size:3.2em;line-height:1.1}button{border-radius:8px;border:1px solid transparent;padding:.6em 1.2em;font-size:1em;font-weight:500;font-family:inherit;background-color:#1a1a1a;cursor:pointer;transition:border-color .25s}button:hover{border-color:#646cff}button:focus,button:focus-visible{outline:4px auto -webkit-focus-ring-color}@media (prefers-color-scheme: light){:root{color:#213547;background-color:#fff}a:hover{color:#747bff}button{background-color:#f9f9f9}}
+.container_button {
+  max-width: 600px;
+  margin-left: 10px;
+  padding: 20px;
+  border: 2px solid #ccc;
+  background-color: #f0f0f0;
+  text-align: center;
+}
+.btn_incr {
+  width: 150px;
+  height: 40px;
+  background-color: green;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+.btn_dism {
+  width: 150px;
+  height: 40px;
+  background-color: red;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+.btn_rein {
+  width: 150px;
+  height: 40px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 10px 20px;
+  cursor: pointer;
+}
+.btn_incr:hover,
+.btn_dism:hover,
+.btn_rein:hover {
+  background-color: gray;
+}
+.container_profile {
+  max-width: 600px;
+  margin-left: 10px;
+  padding: 20px;
+  border: 2px solid #ccc;
+  background-color: #f0f0f0;
+}
+.form {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 10px;
+}
+.input-field {
+  margin-bottom: 10px;
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+}
+.btn {
+  padding: 10px;
+  background-color: #007bff;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.btn:hover {
+  background-color: #0056b3;
+}
+.profile {
+  margin-bottom: 20px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #e9ffea;
+}
+.perfilTitulo {
+  text-align: center;
+}
+.datos_usuario {
+  color: #00f;
+}
+.titulo {
+  font-size: 2.5em;
+}
+.titulo {
+  text-align: center;
+}
+:root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+  color-scheme: light dark;
+  color: #ffffffde;
+  background-color: #242424;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
+}
+body {
+  margin: 0;
+  display: flex;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
+}
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
+}
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
+}
+button:hover {
+  border-color: #646cff;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #fff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
+}
